--- a/wk2/style.css
+++ b/wk2/style.css
@@ -1,11 +1,15 @@
-#something {
-    color: red;
-}
-
-p.something {
-    color: blue;
-}
-
-#good {
-    color: yellow;
-}
+* {
+    color:aqua;
+   }
+   
+   #something {
+       color: red;
+   }
+   
+   p.something {
+       color: blue;
+   }
+   
+   #good {
+       color: yellow;
+   }
